<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
            android:id="@+id/usernameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_action_person"
            android:drawableLeft="@drawable/ic_action_person"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#fff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <EditText
            android:id="@+id/passwordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_action_accounts"
            android:drawableLeft="@drawable/ic_action_accounts"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#fff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <EditText
            android:id="@+id/confirmPasswordReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_action_secure"
            android:drawableLeft="@drawable/ic_action_secure"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textColorHint="#fff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_register"
            android:text="@string/register"
            android:textColor="@color/startRed" />

        </LinearLayout>
    </ScrollView>

    </LinearLayout>

